<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorTimeActivity">

    <ScrollView
        android:id="@+id/scrollview_choices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/sendRequest"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/sendRequest"
        android:layout_width="172dp"
        android:layout_height="59dp"
        android:layout_marginBottom="32dp"
        android:text="Request Tutor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>