<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/time_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24dp"
            android:layout_margin="4dp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group">
            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbutton"
                />
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:layout_marginStart="343dp"-->

<!--                android:layout_marginLeft="343dp"-->
<!--                android:layout_marginEnd="24dp"-->
<!--                android:layout_marginRight="24dp"-->
<!--                android:layout_toEndOf="@+id/time_availability"-->
<!--                android:layout_toRightOf="@+id/time_availability"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toEndOf="@+id/time_availability"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
        </RadioGroup>
    </RelativeLayout>


</androidx.cardview.widget.CardView>

